Refactor and cleanup fetch factory
Cleaned up the MANIFEST.MF and marked certain things internal.

Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/org.eclipse.egit.fetchfactory/plugin.xml
+++ b/org.eclipse.egit.fetchfactory/plugin.xml
@@ -15,7 +15,7 @@
    <extension
          point="org.eclipse.pde.build.fetchFactories">
       <factory
-            class="org.eclipse.egit.fetchfactory.internal.GITFetchTaskFactory"
+            class="org.eclipse.egit.internal.fetchfactory.GITFetchTaskFactory"
             id="GIT">
       </factory>
    </extension>
