Add top-level pom.xml
Change-Id: If255a32827050acbbd444e96ba393b987aeb9549
Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/org.eclipse.egit.pde-feature/feature.properties
+++ b/org.eclipse.egit.pde-feature/feature.properties
@@ -13,7 +13,7 @@ updateSiteName=Eclipse Update Site (experimental)
 
 # description property - text of the "Feature Descrption"
 description=\
-Git support for PDE Build and release engineering.\n
+Git support for PDE Build.\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
