--- a/org.eclipse.egit.fetchfactory/pom.xml
+++ b/org.eclipse.egit.fetchfactory/pom.xml
@@ -17,8 +17,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.eclipse.egit</groupId>
-    <artifactId>egit-parent</artifactId>
+    <groupId>org.eclipse.egit.pde</groupId>
+    <artifactId>egit-pde-parent</artifactId>
     <version>0.10.0-SNAPSHOT</version>
   </parent>
 
