--- a/org.eclipse.egit.pde-feature/pom.xml
+++ b/org.eclipse.egit.pde-feature/pom.xml
@@ -1,48 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-    Copyright (c) 2010 Chris Aniszczyk and others.
-    All rights reserved.
+   Copyright (C) 2010, Chris Aniszczyk <caniszczyk@gmail.com>
 
-    This program and the accompanying materials are made available under the
-    terms of the Eclipse Public License v1.0 which accompanies this distribution,
-    and is available at http://www.eclipse.org/legal/epl-v10.html.
+   All rights reserved. This program and the accompanying materials
+   are made available under the terms of the Eclipse Public License v1.0
+   which accompanies this distribution, and is available at
+   http://www.eclipse.org/legal/epl-v10.html
+-->
 
-    Contributors:
-        Chris Aniszczyk <caniszczyk@gmail.com> - initial API and implementation
- -->
-<feature
-      id="org.eclipse.egit.pde"
-      label="%featureName"
-      version="0.10.0.qualifier"
-      provider-name="%providerName">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-   <description url="http://www.eclipse.org/egit/">
-     %description
-   </description>
+  <parent>
+    <groupId>org.eclipse.egit.pde</groupId>
+    <artifactId>egit-pde-parent</artifactId>
+    <version>0.10.0-SNAPSHOT</version>
+  </parent>
 
-   <copyright>
-     %copyright
-   </copyright>
+  <artifactId>org.eclipse.egit-feature</artifactId>
+  <packaging>eclipse-feature</packaging>
 
-   <license url="%licenseURL">
-     %license
-   </license>
+  <name>Git Fetch Factory for PDE Build Feature (Incubation)</name>
 
-   <url>
-      <update label="%updateSiteName" url="http://download.eclipse.org/egit/updates"/>
-      <discovery label="%updateSiteName" url="http://download.eclipse.org/egit/updates"/>
-   </url>
-
-   <requires>
-      <import plugin="org.eclipse.equinox.common" version="3.6.0" match="compatible"/>
-      <import plugin="org.eclipse.pde.build" version="3.6.1" match="compatible"/>
-   </requires>
-
-   <plugin
-         id="org.eclipse.egit.fetchfactory"
-         download-size="0"
-         install-size="0"
-         version="0.0.0"
-         unpack="false"/>
-
-</feature>
+</project>
