Add update site
In order to provide a p2 repository, we need an update site for Tycho.

Change-Id: I3ca1fa7b0b6f17dc91650ca62f2d8d4efb5554b4
Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
     <module>org.eclipse.egit.fetchfactory</module>
 
     <module>org.eclipse.egit.pde-feature</module>
+    <module>org.eclipse.egit.pde-updatesite</module>
    </modules>
 
   <repositories>
