Refactor the build
Add two features representing the fetch factory and releng
tools integration.

Change-Id: I4ff0b3c1f45182fb402e8c6067ae5adee210cade
Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/org.eclipse.egit.fetchfactory-feature/pom.xml
+++ b/org.eclipse.egit.fetchfactory-feature/pom.xml
@@ -19,7 +19,7 @@
     <version>0.10.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>org.eclipse.egit-feature</artifactId>
+  <artifactId>org.eclipse.egit.fetchfactory-feature</artifactId>
   <packaging>eclipse-feature</packaging>
 
   <name>Git Fetch Factory for PDE Build Feature (Incubation)</name>
