--- a/org.eclipse.egit.pde-updatesite/pom.xml
+++ b/org.eclipse.egit.pde-updatesite/pom.xml
@@ -22,7 +22,7 @@
   <artifactId>org.eclipse.egit.pde-updatesite</artifactId>
   <packaging>eclipse-update-site</packaging>
 
-  <name>Git Support for PDE Build Update Site (Incubation)</name>
+  <name>EGit PDE Tools Update Site (Incubation)</name>
   <!-- see http://issues.sonatype.org/browse/TYCHO-313 -->
   <version>0.10.0-SNAPSHOT</version>
 
