--- a/org.eclipse.egit.relengtools-feature/feature.properties
+++ b/org.eclipse.egit.relengtools-feature/feature.properties
@@ -6,14 +6,14 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Eclipse EGit PDE Support (Incubation)
+featureName=EGit Releng Tools Integration (Incubation)
 providerName=Eclipse EGit
 
 updateSiteName=Eclipse Update Site (experimental)
 
 # description property - text of the "Feature Descrption"
 description=\
-Git support for PDE Build.\n
+Eclipse release engineering tools integration for Git.\n
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
