--- a/org.eclipse.egit.relengtools-feature/.project
+++ b/org.eclipse.egit.relengtools-feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.egit.pde-feature</name>
+	<name>org.eclipse.egit.relengtools-feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
