Add a releng tool for git
It supports picking a map project, selecting map file entries to
update and replacing lines in the mapfile with the new tag entry.

Bug: 328745
Change-Id: Ib1529eace4ba2c571358d1212e2c40cf00fee274
Signed-off-by: Chris Aniszczyk <caniszczyk@gmail.com>

--- a/org.eclipse.egit.relengtools/plugin.xml
+++ b/org.eclipse.egit.relengtools/plugin.xml
@@ -16,11 +16,27 @@
          point="org.eclipse.core.runtime.adapters">
       <factory
             adaptableType="org.eclipse.team.core.RepositoryProviderType"
-            class="org.eclipse.egit.relengtools.internal.GitCopyrightAdapterFactory">
+            class="org.eclipse.egit.internal.relengtools.GitCopyrightAdapterFactory">
          <adapter
                type="org.eclipse.releng.tools.IRepositoryProviderCopyrightAdapterFactory">
          </adapter>
       </factory>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            categoryId="org.eclipse.ui.category.project"
+            defaultHandler="org.eclipse.egit.internal.relengtools.TagAndReleaseHandler"
+            id="z.ex.git.releng.tagAndRelease"
+            name="%command.tagAndRelease">
+      </command>
+      <command
+            categoryId="org.eclipse.ui.category.project"
+            defaultHandler="org.eclipse.egit.internal.relengtools.ShowInfoHandler:test"
+            id="org.eclipse.egit.relengtools.showInfo"
+            name="%command.showInfo">
+      </command>
+   </extension>
+
 
 </plugin>
