--- a/org.eclipse.egit.relengtools-feature/pom.xml
+++ b/org.eclipse.egit.relengtools-feature/pom.xml
@@ -16,12 +16,12 @@
   <parent>
     <groupId>org.eclipse.egit.pde</groupId>
     <artifactId>egit-pde-parent</artifactId>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.12.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.eclipse.egit.relengtools-feature</artifactId>
   <packaging>eclipse-feature</packaging>
 
-  <name>EGit Releng Tools Integration Feature (Incubation)</name>
+  <name>EGit PDE Releng Tools Integration Feature (Incubation)</name>
 
 </project>
